--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-		  "name": "solar-server",
+  "name": "solar-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
-	},
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "cookie-parse": "^0.4.0",
+    "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
